Fix static method call, setter typo, and stream conversion for Iterable in CourseService