@@ -6,6 +6,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Service
 public class CourseService {
@@ -14,10 +16,10 @@ public class CourseService {
     CourseRepository courseRepository;
 
     public List<Course> getAllCourses(String topicId) {
-        return courseRepository.findAll()
-                .stream()
+        Iterable<Course> allCourses = courseRepository.findAll();
+        return StreamSupport.stream(allCourses.spliterator(), false)
                 .filter(course -> course.getTopic().getId().equals(topicId))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void addCourse(Course course) {
